--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,7 +75,8 @@
             </ul>
           </div>
           <div class="col-md-10 col-md-offset-2 main-content">
-            <%= render "shared/resources" %>
+
+            <%= yield %>
           </div>
         </div>
       </div>
